--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "vite",
     "beta": "vite build -m beta",
     "prod": "vite build",
-    "tiny": ""
+    "preview": "vite preview",
+    "tiny": "node ./cli/tinypngPic.js"
   },
   "dependencies": {
     "@types/node": "^18.0.5",
@@ -22,5 +23,9 @@
     "vite": "^3.0.0",
     "vue": "^3.2.36",
     "vue-router": "^4.0.13"
+  },
+  "devDependencies": {
+    "sass": "^1.54.0",
+    "terser": "^5.14.2"
   }
 }
