--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
   },
   "include": [
     "src/**/*",
-    "types/**/*"
+    "types/**/*",
+    "utils/**/*"
   ],
   "exclude": [
     "node_modules",
