--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
     "strictNullChecks": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "experimentalDisableTemplateSupport": true,
+    "jsx": "preserve",
     "lib": ["ES6","DOM"],
     "typeRoots": ["./types","./node_modules/@types"],
     "baseUrl": ".",
